--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,14 @@ body {
   justify-content: center;
 }
 
+body::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  z-index: 1;
+  background-color: rgb(255 255 255 / 0.3);
+}
+
 video {
   width: 100%;
   height: 100%;
@@ -31,14 +39,6 @@ video {
   position: absolute;
   inset: 0;
   z-index: 1;
-}
-
-.page__heading::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  z-index: -2;
-  background-color: rgb(255 255 255 / 0.3);
 }
 
 .page__heading {
@@ -69,12 +69,13 @@ video {
   font-size: 35px;
   font-weight: 400;
   text-transform: none;
+  letter-spacing: normal;
+  text-align: left;
   white-space: pre;
+  color: #000;
   background-color: #fff;
   border-radius: 20px;
   border: black solid 2px;
-  letter-spacing: normal;
-  text-align: left;
   box-shadow: 0 14px 0 0 #000;
 }
 
