--- a/styles/style.css
+++ b/styles/style.css
@@ -54,7 +54,7 @@ video {
   text-transform: uppercase;
 }
 
-.page__heading:hover::before {
+.page__heading::before {
   content: 'На самом деле нет.\AВажнее &mdash; научиться ошибаться.';
   position: absolute;
   top: 180px;
@@ -63,7 +63,7 @@ video {
   display: flex;
   justify-self: right;
   width: 742px;
-  padding: 44px 36px;
+  padding: 36px 44px;
   font-family: 'Raleway', Arial, sans-serif;
   font-size: 35px;
   font-weight: 400;
