--- a/styles/style.css
+++ b/styles/style.css
@@ -68,6 +68,7 @@ video {
   font-size: 35px;
   font-weight: 400;
   text-transform: none;
+  line-height: 35px;
   letter-spacing: normal;
   text-align: left;
   white-space: pre;
