--- a/styles/style.css
+++ b/styles/style.css
@@ -21,31 +21,33 @@ body {
   position: relative;
   min-width: 800px;
   display: flex;
+  /* flex даёт возможность управлять позиционированием внутри контейнера */
   justify-content: center;
 }
 
 body::after {
+  /* Используем абсолютное позиционирование  поэтому нет разницы ::before или ::after*/
+  inset: 0;
   content: "";
   position: absolute;
-  inset: 0;
   z-index: 1;
   background-color: rgb(255 255 255 / 0.3);
 }
 
 video {
+  position: absolute;
+  inset: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center;
-  position: absolute;
-  inset: 0;
-  z-index: 1;
 }
 
 .page__heading {
   width: min-content;
+  height: fit-content;
   z-index: 2;
-  padding-top: 60px;
+  margin-top: 60px;
   font-family: 'Raleway', Arial, sans-serif;
   font-size: 116px;
   font-weight: 800;
@@ -59,16 +61,13 @@ video {
   position: absolute;
   top: 180px;
   right: 20px;
-  z-index: 3;
-  display: flex;
-  justify-self: right;
-  width: 742px;
+  max-width: 760px;
   padding: 36px 44px;
   font-family: 'Raleway', Arial, sans-serif;
   font-size: 35px;
   font-weight: 400;
   text-transform: none;
-  line-height: 35px;
+  line-height: 1;
   letter-spacing: normal;
   text-align: left;
   white-space: pre;
@@ -85,4 +84,5 @@ video {
 
 .page__heading:hover {
   color: #4c4c4c;
+  cursor: default;
 }
